--- a/src/sections/skills/Skills.module.scss
+++ b/src/sections/skills/Skills.module.scss
@@ -5,9 +5,6 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 20px;
-	padding-block: 48px;
-	position: relative;
-	overflow: hidden;
 
 	@include breakpoint("sm", max) {
 		gap: 16px;
