--- a/src/styles/abstracts/_typography.scss
+++ b/src/styles/abstracts/_typography.scss
@@ -57,7 +57,8 @@
 	color: rgba($black, 0.2);
 	text-align: center;
 	position: absolute;
-	inset-inline: 0;
+	display: flex;
+	justify-content: center;
 	top: -48px;
 	z-index: -10;
 
